<resources>
    <string name="app_name">Katzheimer</string>
    <string name="level_upper">상</string>
    <string name="level_middle">중</string>
    <string name="level_lower">하</string>
    <string name="level">난이도 조절</string>
    <string name="volume">볼륨조절</string>
    <string name="setting">Setting</string>
    <string name="music_setting">사운드 음악 설정</string>
    <string name="music_sound1">음악 1</string>
    <string name="music_sound2">음악 2</string>
    <string name="music_sound3">음악 3</string>
    <string name="game_record_view">게임기록보기</string>
    <string name="back_button">뒤로가기</string>
    <string name="save_button">Save</string>
    <string name="view_diary_button">일지 조회하기</string>
    <string name="diary_hint">Write your diary here</string>

    <string name="default_web_client_id">392698074344-k34oj2vn05f555j5th3dduj8trr350kj.apps.googleusercontent.com</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>

</resources>