<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:background="@color/gray"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/level"
            android:textStyle="bold"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/button_style"
                android:text="@string/level_upper"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@drawable/button_style"
                android:text="@string/level_middle"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:background="@drawable/button_style"
                android:text="@string/level_lower"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/volume"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/music_setting"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:orientation="vertical">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButton9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music_sound1" />

                <RadioButton
                    android:id="@+id/radioButton10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music_sound2" />

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/music_sound3" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:gravity="center"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/my_button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/game_record_view"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/my_button6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:text="@string/back_button"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>


</LinearLayout>